--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jackchuka/sdl-decompose",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Decompose GraphQL SDL by operation name to produce partial SDL",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -19,6 +19,10 @@
   ],
   "author": "jackchuka",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jackchuka/sdl-decompose.git"
+  },
   "dependencies": {
     "commander": "^14.0.0",
     "graphql": "^16.8.1"
