--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,22 @@ updates:
     commit-message:
       prefix: "deps"
       include: "scope"
+
+  # GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+      time: "09:00"
+    commit-message:
+      prefix: "ci"
+      include: "scope"
+    reviewers:
+      - "jackchuka"
+    assignees:
+      - "jackchuka"
+    labels:
+      - "dependencies"
+      - "github-actions"
+    target-branch: "main"
