--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,23 +15,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
+        name: Install pnpm
         with:
-          node-version: "24"
-          registry-url: "https://registry.npmjs.org"
+          standalone: true
+          run_install: false
+
+      - name: Install Node.js
+        run: pnpm env use --global 24
+        shell: bash
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run tests
-        run: npm test
+        run: pnpm test
 
       - name: Build project
-        run: npm run prepublishOnly
+        run: pnpm run prepublishOnly
 
       - name: Check if version changed
         id: version-check
@@ -50,7 +53,7 @@ jobs:
 
       - name: Publish to NPM
         if: steps.version-check.outputs.changed == 'true'
-        run: npm publish
+        run: pnpm publish --no-git-checks
 
       - name: Create GitHub Release
         if: steps.version-check.outputs.changed == 'true'
