--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,16 +8,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
         with:
-          node-version: "18"
-          cache: "npm"
+          version: 8.14.1
+          run_install: false
+
+      - name: Install Node.js
+        run: pnpm env use --global 24
+        shell: bash
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
+
+      - name: Lint
+        run: pnpm run lint
+
+      - name: Format check
+        run: pnpm run fmt -- --check .
 
       - name: Run tests
-        run: npm test
+        run: pnpm test
