--- a/package.json
+++ b/package.json
@@ -2,45 +2,52 @@
   "name": "@jackchuka/sdl-decompose",
   "version": "1.2.0",
   "description": "Decompose GraphQL SDL by operation name to produce partial SDL",
+  "keywords": [
+    "decompose",
+    "graphql",
+    "schema",
+    "sdl"
+  ],
+  "license": "MIT",
+  "author": "jackchuka",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jackchuka/sdl-decompose.git"
+  },
+  "bin": {
+    "sdl-decompose": "bin/cli.js"
+  },
+  "files": [
+    "bin/**/*",
+    "dist/**/*"
+  ],
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "lint": "oxlint --type-aware --tsconfig ./tsconfig.json",
+    "lint:fix": "oxlint --fix --type-aware --tsconfig ./tsconfig.json",
+    "fmt": "oxfmt",
     "build": "tsc",
     "build:cli": "node esbuild.config.js",
     "dev": "tsc --watch",
     "test": "jest",
     "prepublishOnly": "npm run build && npm run build:cli"
   },
-  "keywords": [
-    "graphql",
-    "sdl",
-    "decompose",
-    "schema"
-  ],
-  "author": "jackchuka",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jackchuka/sdl-decompose.git"
-  },
   "dependencies": {
-    "commander": "^14.0.0",
-    "graphql": "^16.8.1"
+    "commander": "^14.0.2",
+    "graphql": "^16.12.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
-    "@types/node": "^25.0.2",
-    "esbuild": "^0.27.0",
-    "jest": "^30.0.3",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.0.0"
+    "@types/node": "^25.0.6",
+    "esbuild": "^0.27.2",
+    "jest": "^30.2.0",
+    "oxfmt": "^0.24.0",
+    "oxlint": "^1.39.0",
+    "oxlint-tsgolint": "^0.11.0",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.9.3"
   },
-  "bin": {
-    "sdl-decompose": "bin/cli.js"
-  },
-  "files": [
-    "dist/**/*",
-    "bin/**/*"
-  ]
+  "packageManager": "pnpm@8.14.1"
 }
